# ffmpeg-restorer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_RUS.md  linux_build.sh
ffmpeg-restorer/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.h  main.cpp  probe.cpp  probe.h  task.cpp  task.h
libs/home-dir/: version.txt
libs/json/: version.txt
libs/reproc/: version.txt
libs/reproc/reproc/: CMakeLists.txt
misc/: release_build_linux.sh  release_build_windows.bat
notes/: storage.txt  todo.txt
